pihole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: pihole
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /admin
spec:
  tls:
  - hosts:
    - dns.prayujt.com
    secretName: dns-prayujt-certs
  rules:
  - host: dns.prayujt.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pihole-web
            port:
              number: 8001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress-admin
  namespace: pihole
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - dns.prayujt.com
    secretName: dns-prayujt-certs
  rules:
  - host: dns.prayujt.com
    http:
      paths:
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: pihole-web
            port:
              number: 8001
